--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
-services:  
-  postgres:  
-    image: postgres:15  
-    ports:  
-      - "5432:5432"  
-    environment:  
-      POSTGRES_USER: user  
-      POSTGRES_PASSWORD: password  
-      POSTGRES_DB: taskdb  
-    volumes:  
-      - postgres-data:/var/lib/postgresql/data  
-volumes:  
-  postgres-data:  
+version: '3.8'
+
+services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_URL=postgres://user:password@postgres:5432/taskdb?sslmode=disable
+      - JWT_SECRET=your-production-secret
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: taskdb
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d taskdb"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
